[gd_scene load_steps=6 format=3 uid="uid://bs8rx617nlqrd"]

[ext_resource type="Script" uid="uid://dk1pjsq3pd2cc" path="res://scripts/enemy_charger.gd" id="1_charger"]
[ext_resource type="Script" uid="uid://bhthewnl54as2" path="res://scripts/enemy_health_bar.gd" id="2_healthbar"]
[ext_resource type="Texture2D" uid="uid://cyt3l6vovoubw" path="res://assets/sprites/enemy_texture.png" id="3_texture"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hitbox"]
size = Vector2(80, 100)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_body"]
size = Vector2(35, 55)

[node name="EnemyCharger" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 2
collision_mask = 6
motion_mode = 1
script = ExtResource("1_charger")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-3.5, -1.5)
shape = SubResource("RectangleShape2D_hitbox")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(1, 0.6, 0.1, 1)
texture = ExtResource("3_texture")

[node name="AimLine" type="Line2D" parent="."]
visible = false
points = PackedVector2Array(0, 0, 50, 0)
width = 2.0
default_color = Color(1, 0, 0, 0.5)

[node name="Ghosts" type="Node2D" parent="."]
visible = false

[node name="Ghost1" type="Sprite2D" parent="Ghosts"]
modulate = Color(1, 0.6, 0.1, 1)
z_index = -1
texture = ExtResource("3_texture")

[node name="Ghost2" type="Sprite2D" parent="Ghosts"]
modulate = Color(1, 0.6, 0.1, 1)
z_index = -1
texture = ExtResource("3_texture")

[node name="Ghost3" type="Sprite2D" parent="Ghosts"]
modulate = Color(1, 0.6, 0.1, 1)
z_index = -1
texture = ExtResource("3_texture")

[node name="HealthBar" type="Node2D" parent="."]
position = Vector2(-3.5, -45)
script = ExtResource("2_healthbar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-3.5, -1.5)
shape = SubResource("RectangleShape2D_body")
